Name:                craftwerk-cairo
Version:             0.1
License:	     MIT
License-file:	     LICENSE
Author:              Malte Harder <malte.harder@gmail.com>
Maintainer:          Malte Harder <malte.harder@gmail.com>
Category:	     Graphics
Synopsis:	     Cairo backend for the 2D graphics library Craftwerk.

Stability:	     unstable
Build-Type:          Simple
Cabal-Version:       >=1.8

Extra-Source-Files:  LICENSE

Library
  Hs-Source-Dirs:   src
  Build-Depends:    base >= 3 && < 5,
                    cairo >= 0.11,
                    craftwerk
  Exposed-Modules:  Craftwerk.Core.Driver.Cairo

