Name:                craftwerk-gloss
Version:             0.1
License:	     MIT
License-file:	     LICENSE
Author:              Malte Harder <malte.harder@gmail.com>
Maintainer:          Malte Harder <malte.harder@gmail.com>
Category:	     Graphics
Synopsis:	     Gloss backend for the 2D graphics library.

Stability:	     unstable
Build-Type:          Simple
Cabal-Version:       >=1.8

Extra-Source-Files:  LICENSE

Library
  Hs-Source-Dirs:   src
  Build-Depends:    base >= 3 && < 5,
                    gloss >= 1.2.0,
                    craftwerk
  Exposed-Modules:  Craftwerk.Core.Driver.Gloss
                   
